--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="ui grid top attached menu">
    <div class="sixteen column row">
       <div class="left floated four wide mobile four wide tablet one wide computer column">
-         <a class="item" (click)="toggleButton()" id="menu">
+         <a class="item" (click)="toggleButton()">
             <i class="large sidebar icon"></i>
          </a>
       </div>
@@ -14,16 +14,6 @@
          <a class="item right aligned">
             <i class="big shopping cart icon"></i>
          </a>
-      </div>
-   </div>
-   <div class="row center aligned centered">
-      <div class="sixteen wide tablet six wide computer column">
-         <div class="item">
-            <div class="ui icon input">
-               <input type="text" placeholder="Search...">
-               <i class="search link icon"></i>
-            </div>
-         </div>
       </div>
    </div>
 </div>
