Product Detail with search bar

--- a/src/app/components/product-detail/product-detail.component.html
+++ b/src/app/components/product-detail/product-detail.component.html
@@ -1,3 +1,4 @@
+<app-search-bar></app-search-bar>
 <div class="padded ui centered celled grid">
    <div class="sixteen wide mobile fourteen wide tablet six wide computer column">
       <div class="ui container">
