--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
          </a>
       </div>
       <div class="eight wide mobile eight wide tablet fourteen wide computer center aligned centered column">
-         <a class="center aligned">
+         <a class="center aligned" routerLink="/home">
             <img src="https://upload.wikimedia.org/wikipedia/commons/d/d4/MercadoLibre_logo.PNG" width="150vw" alt="">
          </a>
       </div>
@@ -18,9 +18,13 @@
    </div>
 </div>
 <div class="ui left vertical inverted sidebar labeled icon menu">
-   <a class="item">
+   <a class="item" routerLink="/home">
       <i class="home icon"></i>
       Inicio
+   </a>
+   <a class="item" routerLink="/home">
+      <i class="shopping cart icon"></i>
+      Carrito
    </a>
    <!-- <a class="item">
       <i class="block layout icon"></i>
