--- a/src/app/components/product-detail/product-detail.component.html
+++ b/src/app/components/product-detail/product-detail.component.html
@@ -41,12 +41,12 @@
    </div>
    <div class="actions center aligned">
       <div class="ui grey basic cancel inverted button">
-         <i class="remove icon"></i>
-         Quiero ir al carrito
+         <i class="reply icon"></i>
+         Quiero seguir comprando
       </div>
       <div class="ui green ok inverted button">
          <i class="shopping cart icon"></i>
-         Quiero seguir comprando
+         Quiero ir al carrito
       </div>
    </div>
 </div>
