--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="ui grid top attached menu">
+<div class="ui grid top attached menu ml-color">
    <div class="sixteen column row">
       <div class="left floated four wide mobile four wide tablet one wide computer column">
          <a class="item" (click)="toggleButton()">
@@ -11,7 +11,7 @@
          </a>
       </div>
       <div class="four wide mobile four wide tablet one wide computer column">
-         <a class="item right aligned">
+         <a class="item right aligned" routerLink="/shoping-car">
             <i class="big shopping cart icon"></i>
          </a>
       </div>
@@ -22,7 +22,7 @@
       <i class="home icon"></i>
       Inicio
    </a>
-   <a class="item" routerLink="/home">
+   <a class="item" routerLink="/shoping-car">
       <i class="shopping cart icon"></i>
       Carrito
    </a>
