--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+   font-family: 'Lato', sans-serif;
+ }
+ .light {
+   font-weight: 300 !important;
+ }
+.ml-color{
+   background-color: #fff159 !important;
+}
+.ml-color-green{
+   color: #00a650 !important;
+}
+.ml-color-blue{
+   background-color: #3483fa !important;
+}
+.up-size{
+   font-size: 3em !important;
+}
