--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -11,6 +11,9 @@
             <span class="date">Cantidad: {{product.available_quantity}}</span>
          </div>
          <div class="description truncate-text">
+            Vendedor: {{product.seller.id}}
+         </div>
+         <div class="description truncate-text">
             {{product.title}}
          </div>
       </div>
