Nuevo logo de mercadolibre no racista :v

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
       </div>
       <div class="eight wide mobile eight wide tablet fourteen wide computer center aligned centered column">
          <a class="center aligned" routerLink="/home">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/d/d4/MercadoLibre_logo.PNG" width="150vw" alt="">
+            <img src="/assets/logo.png" width="150vw" alt="">
          </a>
       </div>
       <div class="four wide mobile four wide tablet one wide computer column">
